Added setting to disable browser link

--- a/src/GosuArena/GosuArena/Web.config
+++ b/src/GosuArena/GosuArena/Web.config
@@ -20,6 +20,7 @@
     <add name="GosuArena" connectionString="server=.\SQLEXPRESS;database=gosuarena;User Id=arenauser;Password=arenauser" />
   </connectionStrings>
   <appSettings>
+    <add key="vs:EnableBrowserLink" value="false"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
