Made sure the right tile is used for the right wall

--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -179,8 +179,12 @@
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Content\images\map.jpg" />
-    <Content Include="Content\images\wall.png" />
     <Content Include="Content\images\walls.png" />
+    <Content Include="Content\images\wall_corner.png" />
+    <Content Include="Content\images\wall_east.png" />
+    <Content Include="Content\images\wall_north.png" />
+    <Content Include="Content\images\wall_south.png" />
+    <Content Include="Content\images\wall_west.png" />
     <Content Include="Scripts\game\terrain.js" />
     <Content Include="Scripts\game\worldObject.js" />
     <Content Include="Scripts\gosu\meta.js" />
