--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -180,7 +180,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Content\images\map.jpg" />
     <Content Include="Content\images\walls.png" />
-    <Content Include="Content\images\wall_corner.png" />
+    <Content Include="Content\images\wall_corner_left.png" />
+    <Content Include="Content\images\wall_corner_right.png" />
     <Content Include="Content\images\wall_east.png" />
     <Content Include="Content\images\wall_north.png" />
     <Content Include="Content\images\wall_south.png" />
