--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Content\images\map.jpg" />
+    <Content Include="Content\images\mech.png" />
     <Content Include="Content\images\walls.png" />
     <Content Include="Content\images\wall_corner_left.png" />
     <Content Include="Content\images\wall_corner_right.png" />
