--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Entities\Bot.cs" />
     <Compile Include="Models\Account\ChangePasswordModel.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="Models\Match\BotModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Content\images\map.jpg" />
     <Content Include="Content\images\mech.png" />
