--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -179,15 +179,17 @@
     <Compile Include="Entities\User.cs" />
     <Compile Include="Models\Match\BotModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Content Include="Content\images\map.jpg" />
-    <Content Include="Content\images\mech.png" />
-    <Content Include="Content\images\walls.png" />
-    <Content Include="Content\images\wall_corner_left.png" />
-    <Content Include="Content\images\wall_corner_right.png" />
-    <Content Include="Content\images\wall_east.png" />
-    <Content Include="Content\images\wall_north.png" />
-    <Content Include="Content\images\wall_south.png" />
-    <Content Include="Content\images\wall_west.png" />
+    <Content Include="Content\images\docs\high_performance.png" />
+    <Content Include="Content\images\sprites\map.jpg" />
+    <Content Include="Content\images\sprites\mech.png" />
+    <Content Include="Content\images\sprites\mech2.png" />
+    <Content Include="Content\images\sprites\walls.png" />
+    <Content Include="Content\images\sprites\wall_corner_left.png" />
+    <Content Include="Content\images\sprites\wall_corner_right.png" />
+    <Content Include="Content\images\sprites\wall_east.png" />
+    <Content Include="Content\images\sprites\wall_north.png" />
+    <Content Include="Content\images\sprites\wall_south.png" />
+    <Content Include="Content\images\sprites\wall_west.png" />
     <Content Include="Scripts\game\terrain.js" />
     <Content Include="Scripts\game\worldObject.js" />
     <Content Include="Scripts\gosu\meta.js" />
