Added REST api for uploading bot scripts

--- a/src/GosuArena/GosuArena/Web.config
+++ b/src/GosuArena/GosuArena/Web.config
@@ -20,7 +20,7 @@
     <add name="GosuArena" connectionString="server=.\SQLEXPRESS;database=gosuarena;User Id=arenauser;Password=arenauser" />
   </connectionStrings>
   <appSettings>
-    <add key="vs:EnableBrowserLink" value="false"/>
+    <add key="vs:EnableBrowserLink" value="false" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
@@ -106,6 +106,14 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.17.0" newVersion="1.8.17.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.9.5.0" newVersion="0.9.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
