--- a/src/GosuArena/GosuArena/packages.config
+++ b/src/GosuArena/GosuArena/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
+  <package id="NUnit" version="2.6.3" targetFramework="net40" />
   <package id="WebGrease" version="1.5.2" targetFramework="net40" />
   <package id="WeenyMapper" version="1.0.4" targetFramework="net40" />
   <package id="YUICompressor.NET" version="2.3.0.0" targetFramework="net40" />
