--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -186,7 +186,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Content\bootstrap-notify\css\bootstrap-notify.css" />
     <Content Include="Content\bootstrap-notify\js\bootstrap-notify.js" />
+    <Content Include="Content\images\docs\bot_api_get_request.PNG" />
+    <Content Include="Content\images\docs\bot_api_put_request.PNG" />
     <Content Include="Content\images\docs\high_performance.png" />
+    <Content Include="Content\images\docs\profile_after_show_api_key.PNG" />
+    <Content Include="Content\images\docs\profile_enable_api_access.PNG" />
+    <Content Include="Content\images\docs\profile_show_api_key.PNG" />
     <Content Include="Content\images\sprites\map.jpg" />
     <Content Include="Content\images\sprites\mech.png" />
     <Content Include="Content\images\sprites\mech2.png" />
