--- a/src/GosuArena/GosuArena/packages.config
+++ b/src/GosuArena/GosuArena/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net40" />
+  <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net40" />
+  <package id="DataAnnotationsExtensions.MVC3" version="1.1.0.0" targetFramework="net40" />
   <package id="dotless" version="1.4.0.0" targetFramework="net40" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net40" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
@@ -19,6 +21,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="WebActivator" version="1.2.0.0" targetFramework="net40" />
   <package id="WebGrease" version="1.5.2" targetFramework="net40" />
   <package id="WeenyMapper" version="1.0.4" targetFramework="net40" />
   <package id="YUICompressor.NET" version="2.3.0.0" targetFramework="net40" />
