--- a/src/GosuArena/GosuArena/GosuArena.csproj
+++ b/src/GosuArena/GosuArena/GosuArena.csproj
@@ -214,6 +214,7 @@
     <Content Include="Content\images\sprites\wall_north.png" />
     <Content Include="Content\images\sprites\wall_south.png" />
     <Content Include="Content\images\sprites\wall_west.png" />
+    <Content Include="Robots.txt" />
     <Content Include="Scripts\bots\waller.js" />
     <Content Include="Scripts\game\botRegistrar.js" />
     <Content Include="Scripts\game\terrain.js" />
